Finally fixed the scrollbar issue and finished coding alot of the submenus of the advanced tab

--- a/asus_x570_creator_version_402/extreme-tweaker/dram-timing-control/dram-timing-control-page-3.html
+++ b/asus_x570_creator_version_402/extreme-tweaker/dram-timing-control/dram-timing-control-page-3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- When copying, change title every new page, change href on each level of directories-->
     <link rel="stylesheet" href="../../../styles.css">
-    <title>Extreme Tweaker\Precision Boost Overdrive</title>
+    <title>DRAM Timing Control</title>
     <style>
         html, body {
             width: 1920;
@@ -70,9 +70,12 @@
                         <button class = "button_exit"></button>
                     </a>
                 </div>
+                
+                <!-- Below are all links in the main window of the BIOS -->
 
                 <!-- This code is for pages that have a scroll bar -->
                 <!-- YOU MUST FILL IN THE HREF FOR EACH BUTTON EVERY TIME -->
+                <!-- DO NOT! CODE BUTTONS BELOW THE SCROLL BARS, AS IT WILL BREAK THEM -->
 
                 <div class="overlay_scroll_up">
                     <a href="dram-timing-control-page-2.html">
@@ -82,19 +85,6 @@
                 <div class="overlay_scroll_down">
                     <a href="dram-timing-control-page-4.html">
                         <button class = "button_scroll_down"></button>
-                    </a>
-                </div>
-
-                <!-- Below are all links in the main window of the BIOS -->
-
-                <div class="overlay_back_a_page">
-                    <a href="../../extreme-tweaker/extreme-tweaker_1.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_curve_optimizer">
-                    <a href="curve-optimizer/curve_optimizer.html">
-                        <button class = "button_in_window"></button>
                     </a>
                 </div>
             </div>
