--- a/asus_x570_creator_version_402/extreme-tweaker/extreme-tweaker_precision-boost-overdrive/precision-boost-module_1.html
+++ b/asus_x570_creator_version_402/extreme-tweaker/extreme-tweaker_precision-boost-overdrive/precision-boost-module_1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- When copying, change title every new page, change href on each level of directories-->
     <link rel="stylesheet" href="../../../styles.css">
-    <title>Extreme Tweaker\Precision Boost Overdrive</title>
+    <title>Precision Boost Overdrive</title>
     <style>
         html, body {
             width: 1920;
