--- a/asus_x570_creator_version_402/extreme-tweaker/tweaker's-paradise/tweakers-paradise_1.html
+++ b/asus_x570_creator_version_402/extreme-tweaker/tweaker's-paradise/tweakers-paradise_1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- When copying, change title every new page, change href on each level of directories-->
     <link rel="stylesheet" href="../../../styles.css">
-    <title>Extreme Tweaker</title>
+    <title>Tweaker's Paradise<BS></title>
     <style>
         html, body {
             width: 1920;
@@ -70,6 +70,11 @@
                         <button class = "button_exit"></button>
                     </a>
                 </div>
+                <div class="overlay_back_a_page">
+                    <a href="../../extreme-tweaker/extreme-tweaker_2.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
                 <!-- This code is for pages that have a scroll bar -->
                 <!-- YOU MUST FILL IN THE HREF FOR EACH BUTTON EVERY TIME -->
 
@@ -83,8 +88,6 @@
                         <button class = "button_scroll_down"></button>
                     </a>
                 </div>
-
-                <!-- End of copy-pasta code. Code below is specific to this page -->
             </div>
         </div>
     </body>
