--- a/asus_x570_creator_version_402/advanced/advanced_1.html
+++ b/asus_x570_creator_version_402/advanced/advanced_1.html
@@ -70,7 +70,83 @@
                         <button class = "button_exit"></button>
                     </a>
                 </div>
-                <!-- End of copy-pasta code. Code below is specific to this page -->
+
+                <!-- Below are all links in the main window of the BIOS -->
+
+                <div class="overlay_trusted_computing">
+                    <a href="trusted-computing/trusted_computing.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_amd_ftpm_configuration">
+                    <a href="amd-ftpm-configuration/amd_ftpm_configuration.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_cpu_configuration">
+                    <a href="cpu-configuration/cpu_configuration.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_sata_configuration">
+                    <a href="sata-configuration/sata_configuration.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_onboard_devices_configuration">
+                    <a href="onboard-devices-configuration/onboard_devices_configuration.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_apm_configuration">
+                    <a href="apm-configuration/apm_configuration.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_pci_subsystem_settings">
+                    <a href="pci-subsystems-settings/pci_subsystems_settings.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_usb_configuration">
+                    <a href="usb-configuration/usb_configuration.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_network_stack_configuration">
+                    <a href="extreme-tweaker_precision-boost-overdrive/precision-boost-module_1.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_hdd_sdd_smart_information">
+                    <a href="dram-timing-control/dram-timing-control-page-1.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_nvme_configuration">
+                    <a href="external-digi+-power-control/external-digi-power-control.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_amd_pbs">
+                    <a href="external-digi+-power-control/external-digi-power-control.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <!-- This code is for pages that have a scroll bar -->
+                <!-- YOU MUST FILL IN THE HREF FOR EACH BUTTON EVERY TIME -->
+                <!-- DO NOT! CODE BUTTONS BELOW THE SCROLL BARS, AS IT WILL BREAK THEM -->
+
+                <div class="overlay_scroll_up">
+                    <a href=>
+                        <button class = "button_scroll_up"></button>
+                    </a>
+                </div>
+                <div class="overlay_scroll_down">
+                    <a href="advanced_2.html">
+                        <button class = "button_scroll_down"></button>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
