I completed all of the pages for the Advanced tab of the BIOS

--- a/asus_x570_creator_version_402/advanced/advanced_2.html
+++ b/asus_x570_creator_version_402/advanced/advanced_2.html
@@ -87,47 +87,47 @@
                 </a>
             </div>
             <div class="overlay_network_stack_configuration2">
-                <a href=></a>
+                <a href="network-stack-configuration/network_stack_configuration.html">
                     <button class = "button_in_window"></button>
                 </a>
             </div>
             <div class="overlay_hdd_sdd_smart_information2">
-                <a href=></a>
+                <a href="hdd-ssd-smart-information/hdd_ssd_smart_information.html">
                     <button class = "button_in_window"></button>
                 </a>
             </div>
             <div class="overlay_nvme_configuration2">
-                <a href=></a>
+                <a href="nvme-configuration/nvme_configuration.html">
                     <button class = "button_in_window"></button>
                 </a>
             </div>
             <div class="overlay_amd_pbs2">
-                <a href=></a>
+                <a href="amd-pbs/amd_pbs.html">
                     <button class = "button_in_window"></button>
                 </a>
             </div>
             <div class="overlay_amd_overclocking">
-                <a href=></a>
+                <a href="amd-overclocking/amd_overclocking.html">
                     <button class = "button_in_window"></button>
                 </a>
             </div>
             <div class="overlay_amd_cbs">
-                <a href=></a>
+                <a href="amd-cbs/amd_cbs.html">
                     <button class = "button_in_window"></button>
                 </a>
             </div>
             <div class="overlay_ipv4_network_configuration">
-                <a href=></a>
+                <a href="ipv4-network-configuration/ipv4_network_configuration.html">
                     <button class = "button_in_window"></button>
                 </a>
             </div>
             <div class="overlay_intel_r_ethernet_controller">
-                <a href=></a>
+                <a href="intel(r)-ethernet-controller-(2)-i225-v---d8_50_e6_22_33_3c/intel_r_ethernet_controller.html">
                     <button class = "button_in_window"></button>
                 </a>
             </div>
             <div class="overlay_ipv4_network_configuration2">
-                <a href=></a>
+                <a href="ipv4-network-configuration_2/ipv4_network_configuration2.html">
                     <button class = "button_in_window"></button>
                 </a>
             </div>
