--- a/asus_x570_creator_version_402/advanced/amd-cbs/cpu-common-options/cpu_common_options.html
+++ b/asus_x570_creator_version_402/advanced/amd-cbs/cpu-common-options/cpu_common_options.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- When copying, change title every new page, change href on each level of directories-->
-    <link rel="stylesheet" href="../../styles.css">
-    <title>Advanced</title>
+    <link rel="stylesheet" href="../../../../styles.css">
+    <title>CPU Common Options</title>
     <style>
         html, body {
             width: 1920;
@@ -33,103 +33,63 @@
             <div class="img-wrapper">
                 <!-- When copying, change src image for every new page -->
                 <img class="img-responsive"
-                    src="advanced_1.png">
+                    src="advanced_amd-cbs_cpu-common-options_1.png">
                 <!-- When copying, change href for each button for each level of directories -->
                 <div class="overlay_main">
-                    <a href="../main/main_1.html">
+                    <a href="../../../main/main_1.html">
                         <button class = "button_main"></button>
                     </a>
                 </div>
                 <div class="overlay_extreme-tweaker">
-                    <a href="../extreme-tweaker/extreme-tweaker_1.html">
+                    <a href="../../../extreme-tweaker/extreme-tweaker_1.html">
                         <button class = "button_extreme-tweaker"></button>
                     </a>
                 </div>
                 <div class="overlay_advanced">
-                    <a href="../advanced/advanced_1.html">
+                    <a href="../../../advanced/advanced_1.html">
                         <button class = "button_advanced"></button>
                     </a>
                 </div>
                 <div class="overlay_monitor">
-                    <a href="../monitor/monitor_1.html">
+                    <a href="../../../monitor/monitor_1.html">
                         <button class = "button_monitor"></button>
                     </a>
                 </div>
                 <div class="overlay_boot">
-                    <a href="../boot/boot_1.html">
+                    <a href="../../../boot/boot_1.html">
                         <button class = "button_boot"></button>
                     </a>
                 </div>
                 <div class="overlay_tool">
-                    <a href="../tool/tool_1.html">
+                    <a href="../../../tool/tool_1.html">
                         <button class = "button_tool"></button>
                     </a>
                 </div>
                 <div class="overlay_exit">
-                    <a href="../exit/exit_1.html">
+                    <a href="../../../exit/exit_1.html">
                         <button class = "button_exit"></button>
                     </a>
                 </div>
 
                 <!-- Below are all links in the main window of the BIOS -->
 
-                <div class="overlay_trusted_computing">
-                    <a href="trusted-computing/trusted_computing.html">
+                <div class="overlay_back_a_page">
+                    <a href="../amd_cbs.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_amd_ftpm_configuration">
-                    <a href="amd-ftpm-configuration/amd_ftpm_configuration.html">
+                <div class="overlay_performance">
+                    <a href="performance/performance.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_cpu_configuration">
-                    <a href="cpu-configuration/cpu_configuration.html">
+                <div class="overlay_prefetcher_settings">
+                    <a href="prefetcher-settings/prefetcher_settings.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_sata_configuration">
-                    <a href="sata-configuration/sata_configuration.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_onboard_devices_configuration">
-                    <a href="onboard-devices-configuration/onboard_devices_configuration.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_apm_configuration">
-                    <a href="apm-configuration/apm_configuration.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_pci_subsystem_settings">
-                    <a href="pci-subsystems-settings/pci_subsystems_settings.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_usb_configuration">
-                    <a href="usb-configuration/usb_configuration.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_network_stack_configuration">
-                    <a href="network-stack-configuration/network_stack_configuration.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_hdd_sdd_smart_information">
-                    <a href="hdd-ssd-smart-information/hdd_ssd_smart_information.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_nvme_configuration">
-                    <a href="nvme-configuration/nvme_configuration.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_amd_pbs">
-                    <a href="amd-pbs/amd_pbs.html">
+                <div class="overlay_core_watchdog">
+                    <a href="core-watchdog/core_watchdog.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
@@ -143,7 +103,7 @@
                     </a>
                 </div>
                 <div class="overlay_scroll_down">
-                    <a href="advanced_2.html">
+                    <a href="cpu_common_options2.html">
                         <button class = "button_scroll_down"></button>
                     </a>
                 </div>
