--- a/asus_x570_creator_version_402/advanced/nvme-configuration/samsung-ssd-980-pro-1tb_1/samsung_ssd_980_pro_1tb_1.html
+++ b/asus_x570_creator_version_402/advanced/nvme-configuration/samsung-ssd-980-pro-1tb_1/samsung_ssd_980_pro_1tb_1.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- When copying, change title every new page, change href on each level of directories-->
-    <link rel="stylesheet" href="../../styles.css">
-    <title>Extreme Tweaker</title>
+    <link rel="stylesheet" href="../../../../styles.css">
+    <title>Samsung SSD 980 Pro 1TB</title>
     <style>
         html, body {
             width: 1920;
@@ -33,78 +33,49 @@
             <div class="img-wrapper">
                 <!-- When copying, change src image for every new page -->
                 <img class="img-responsive"
-                    src="extreme-tweaker_2.png">
+                    src="advanced_samsung-ssd-980-pro-1tb_1.png">
                 <!-- When copying, change href for each button for each level of directories -->
                 <div class="overlay_main">
-                    <a href="../main/main_1.html">
+                    <a href="../../../main/main_1.html">
                         <button class = "button_main"></button>
                     </a>
                 </div>
                 <div class="overlay_extreme-tweaker">
-                    <a href="../extreme-tweaker/extreme-tweaker_1.html">
+                    <a href="../../../extreme-tweaker/extreme-tweaker_1.html">
                         <button class = "button_extreme-tweaker"></button>
                     </a>
                 </div>
                 <div class="overlay_advanced">
-                    <a href="../advanced/advanced_1.html">
+                    <a href="../../../advanced/advanced_1.html">
                         <button class = "button_advanced"></button>
                     </a>
                 </div>
                 <div class="overlay_monitor">
-                    <a href="../monitor/monitor_1.html">
+                    <a href="../../../monitor/monitor_1.html">
                         <button class = "button_monitor"></button>
                     </a>
                 </div>
                 <div class="overlay_boot">
-                    <a href="../boot/boot_1.html">
+                    <a href="../../../boot/boot_1.html">
                         <button class = "button_boot"></button>
                     </a>
                 </div>
                 <div class="overlay_tool">
-                    <a href="../tool/tool_1.html">
+                    <a href="../../../tool/tool_1.html">
                         <button class = "button_tool"></button>
                     </a>
                 </div>
                 <div class="overlay_exit">
-                    <a href="../exit/exit_1.html">
+                    <a href="../../../exit/exit_1.html">
                         <button class = "button_exit"></button>
                     </a>
                 </div>
 
                 <!-- Below are all links in the main window of the BIOS -->
 
-                <div class="overlay_slot_1">
-                    <a href="extreme-tweaker_precision-boost-overdrive/precision-boost-module_1.html">
+                <div class="overlay_back_a_page">
+                    <a href="../nvme_configuration.html">
                         <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_dram_timing_control">
-                    <a href="dram-timing-control/dram-timing-control-page-1.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_external_digi_power_control">
-                    <a href="external-digi+-power-control/external-digi-power-control.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_tweakers_paradise">
-                    <a href="tweaker's-paradise/">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <!-- This code is for pages that have a scroll bar -->
-                <!-- YOU MUST FILL IN THE HREF FOR EACH BUTTON EVERY TIME -->
-                <!-- DO NOT! CODE BUTTONS BELOW THE SCROLL BARS, AS IT WILL BREAK THEM -->
-
-                <div class="overlay_scroll_up">
-                    <a href="extreme-tweaker_1.html">
-                        <button class = "button_scroll_up"></button>
-                    </a>
-                </div>
-                <div class="overlay_scroll_down">
-                    <a href=>
-                        <button class = "button_scroll_down"></button>
                     </a>
                 </div>
             </div>
