--- a/asus_x570_creator_version_402/extreme-tweaker/extreme-tweaker_1.html
+++ b/asus_x570_creator_version_402/extreme-tweaker/extreme-tweaker_1.html
@@ -86,6 +86,7 @@
                                 
                 <!-- This code is for pages that have a scroll bar -->
                 <!-- YOU MUST FILL IN THE HREF FOR EACH BUTTON EVERY TIME -->
+                <!-- DO NOT! CODE BUTTONS BELOW THE SCROLL BARS, AS IT WILL BREAK THEM -->
 
                 <div class="overlay_scroll_up">
                     <a href=>
