Fully completed this BIOS, leaving only the index to work on.

--- a/asus_x570_creator_version_402/advanced/advanced_1.html
+++ b/asus_x570_creator_version_402/advanced/advanced_1.html
@@ -73,62 +73,62 @@
 
                 <!-- Below are all links in the main window of the BIOS -->
 
-                <div class="overlay_trusted_computing">
+                <div class="overlay_slot1">
                     <a href="trusted-computing/trusted_computing.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_amd_ftpm_configuration">
+                <div class="overlay_slot2">
                     <a href="amd-ftpm-configuration/amd_ftpm_configuration.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_cpu_configuration">
+                <div class="overlay_slot3">
                     <a href="cpu-configuration/cpu_configuration.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_sata_configuration">
+                <div class="overlay_slot4">
                     <a href="sata-configuration/sata_configuration.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_onboard_devices_configuration">
+                <div class="overlay_slot5">
                     <a href="onboard-devices-configuration/onboard_devices_configuration.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_apm_configuration">
+                <div class="overlay_slot6">
                     <a href="apm-configuration/apm_configuration.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_pci_subsystem_settings">
+                <div class="overlay_slot7">
                     <a href="pci-subsystems-settings/pci_subsystems_settings.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_usb_configuration">
+                <div class="overlay_slot8">
                     <a href="usb-configuration/usb_configuration.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_network_stack_configuration">
+                <div class="overlay_slot9">
                     <a href="network-stack-configuration/network_stack_configuration.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_hdd_sdd_smart_information">
+                <div class="overlay_slot10">
                     <a href="hdd-ssd-smart-information/hdd_ssd_smart_information.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_nvme_configuration">
+                <div class="overlay_slot11">
                     <a href="nvme-configuration/nvme_configuration.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_amd_pbs">
+                <div class="overlay_slot12">
                     <a href="amd-pbs/amd_pbs.html">
                         <button class = "button_in_window"></button>
                     </a>
