--- a/asus_x570_creator_version_402/boot/boot_1.html
+++ b/asus_x570_creator_version_402/boot/boot_1.html
@@ -70,7 +70,22 @@
                         <button class = "button_exit"></button>
                     </a>
                 </div>
-                <!-- End of copy-pasta code. Code below is specific to this page -->
+                
+                <div class="overlay_slot1">
+                    <a href="boot-configuration/boot_configuration.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_slot2">
+                    <a href="csm-(compatibility-support-module)/csm_compatibility_support-module.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_slot3">
+                    <a href="secure-boot/secure_boot.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
