--- a/asus_x570_creator_version_402/exit/exit_1.html
+++ b/asus_x570_creator_version_402/exit/exit_1.html
@@ -70,7 +70,26 @@
                         <button class = "button_exit"></button>
                     </a>
                 </div>
-                <!-- End of copy-pasta code. Code below is specific to this page -->
+                <div class="overlay_slot1">
+                    <a href="load-optimized-defaults/load_optimized_defaults.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_slot2">
+                    <a href="save-changes-&-reset/save_changes_reset.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_slot3">
+                    <a href="discard-changes-&-exit/discard_changes_exit.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_slot4">
+                    <a href="launch-efi-shell-from-usb-drives/launch_efi_shell_from_usb_drives.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
