--- a/asus_x570_creator_version_402/monitor/q-fan-configuratino/chassis-fan(s)-configuration/chassis_fan_configuration6.html
+++ b/asus_x570_creator_version_402/monitor/q-fan-configuratino/chassis-fan(s)-configuration/chassis_fan_configuration6.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- When copying, change title every new page, change href on each level of directories-->
-    <link rel="stylesheet" href="../../styles.css">
-    <title>Monitor</title>
+    <link rel="stylesheet" href="../../../../styles.css">
+    <title>Chassis Fan Configuration</title>
     <style>
         html, body {
             width: 1920;
@@ -33,72 +33,50 @@
             <div class="img-wrapper">
                 <!-- When copying, change src image for every new page -->
                 <img class="img-responsive"
-                    src="monitor_1.png">
+                    src="chassis fan(s) configuratino page 6.png">
                 <!-- When copying, change href for each button for each level of directories -->
                 <div class="overlay_main">
-                    <a href="../main/main_1.html">
+                    <a href="../../main/main_1.html">
                         <button class = "button_main"></button>
                     </a>
                 </div>
                 <div class="overlay_extreme-tweaker">
-                    <a href="../extreme-tweaker/extreme-tweaker_1.html">
+                    <a href="../../../extreme-tweaker/extreme-tweaker_1.html">
                         <button class = "button_extreme-tweaker"></button>
                     </a>
                 </div>
                 <div class="overlay_advanced">
-                    <a href="../advanced/advanced_1.html">
+                    <a href="../../../advanced/advanced_1.html">
                         <button class = "button_advanced"></button>
                     </a>
                 </div>
                 <div class="overlay_monitor">
-                    <a href="../monitor/monitor_1.html">
+                    <a href="../../../monitor/monitor_1.html">
                         <button class = "button_monitor"></button>
                     </a>
                 </div>
                 <div class="overlay_boot">
-                    <a href="../boot/boot_1.html">
+                    <a href="../../../boot/boot_1.html">
                         <button class = "button_boot"></button>
                     </a>
                 </div>
                 <div class="overlay_tool">
-                    <a href="../tool/tool_1.html">
+                    <a href="../../../tool/tool_1.html">
                         <button class = "button_tool"></button>
                     </a>
                 </div>
                 <div class="overlay_exit">
-                    <a href="../exit/exit_1.html">
+                    <a href="../../../exit/exit_1.html">
                         <button class = "button_exit"></button>
                     </a>
                 </div>
-                <!-- Below are all links in the main window of the BIOS -->
 
-                <div class="overlay_slot1">
-                    <a href="temperature-monitor/temperature_monitor.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_slot2">
-                    <a href="fan-speed-monitor/fan_speed_monitor.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_slot3">
-                    <a href="voltage-and-current-monitor/voltage_and_current_monitor.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_slot4">
-                    <a href="q-fan-configuratino/q_fan_configuration.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                                
                 <!-- This code is for pages that have a scroll bar -->
                 <!-- YOU MUST FILL IN THE HREF FOR EACH BUTTON EVERY TIME -->
                 <!-- DO NOT! CODE BUTTONS BELOW THE SCROLL BARS, AS IT WILL BREAK THEM -->
 
                 <div class="overlay_scroll_up">
-                    <a href="extreme-tweaker_1.html">
+                    <a href="chassis_fan_configuration5.html">
                         <button class = "button_scroll_up"></button>
                     </a>
                 </div>
