--- a/asus_x570_creator_version_402/tool/tool_1.html
+++ b/asus_x570_creator_version_402/tool/tool_1.html
@@ -70,7 +70,36 @@
                         <button class = "button_exit"></button>
                     </a>
                 </div>
-                <!-- End of copy-pasta code. Code below is specific to this page -->
+                <div class="overlay_slot1_1">
+                    <a href="asus-ez-flash-3-utility/asus_ez_flash_3_utility.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_slot3_5">
+                    <a href="asus-secure-erase/asus_secure_erase.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_slot_6_1">
+                    <a href="asus-user-profile/asus_user_profile.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_slot_7_1">
+                    <a href="asus-spd-information/asus_spd_information.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_slot_8_1">
+                    <a href="myasus/my_asus.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
+                <div class="overlay_slot_9_6">
+                    <a href="asus-armoury-crate/asus_armoury_crate.html">
+                        <button class = "button_in_window"></button>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
