--- a/asus_x570_creator_version_402/monitor/q-fan-configuratino/q_fan_configuration.html
+++ b/asus_x570_creator_version_402/monitor/q-fan-configuratino/q_fan_configuration.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- When copying, change title every new page, change href on each level of directories-->
-    <link rel="stylesheet" href="../../styles.css">
-    <title>Monitor</title>
+    <link rel="stylesheet" href="../../../styles.css">
+    <title>Q-Fan Configuration</title>
     <style>
         html, body {
             width: 1920;
@@ -33,62 +33,53 @@
             <div class="img-wrapper">
                 <!-- When copying, change src image for every new page -->
                 <img class="img-responsive"
-                    src="monitor_1.png">
+                    src="q-fan-configuration page 1.png">
                 <!-- When copying, change href for each button for each level of directories -->
                 <div class="overlay_main">
-                    <a href="../main/main_1.html">
+                    <a href="../../main/main_1.html">
                         <button class = "button_main"></button>
                     </a>
                 </div>
                 <div class="overlay_extreme-tweaker">
-                    <a href="../extreme-tweaker/extreme-tweaker_1.html">
+                    <a href="../../extreme-tweaker/extreme-tweaker_1.html">
                         <button class = "button_extreme-tweaker"></button>
                     </a>
                 </div>
                 <div class="overlay_advanced">
-                    <a href="../advanced/advanced_1.html">
+                    <a href="../../advanced/advanced_1.html">
                         <button class = "button_advanced"></button>
                     </a>
                 </div>
                 <div class="overlay_monitor">
-                    <a href="../monitor/monitor_1.html">
+                    <a href="../../monitor/monitor_1.html">
                         <button class = "button_monitor"></button>
                     </a>
                 </div>
                 <div class="overlay_boot">
-                    <a href="../boot/boot_1.html">
+                    <a href="../../boot/boot_1.html">
                         <button class = "button_boot"></button>
                     </a>
                 </div>
                 <div class="overlay_tool">
-                    <a href="../tool/tool_1.html">
+                    <a href="../../tool/tool_1.html">
                         <button class = "button_tool"></button>
                     </a>
                 </div>
                 <div class="overlay_exit">
-                    <a href="../exit/exit_1.html">
+                    <a href="../../exit/exit_1.html">
                         <button class = "button_exit"></button>
                     </a>
                 </div>
-                <!-- Below are all links in the main window of the BIOS -->
 
-                <div class="overlay_slot1">
-                    <a href="temperature-monitor/temperature_monitor.html">
+                 <!-- Below are all links in the main window of the BIOS -->
+                
+                <div class="overlay_back_a_page">
+                    <a href="../monitor_1.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
-                <div class="overlay_slot2">
-                    <a href="fan-speed-monitor/fan_speed_monitor.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_slot3">
-                    <a href="voltage-and-current-monitor/voltage_and_current_monitor.html">
-                        <button class = "button_in_window"></button>
-                    </a>
-                </div>
-                <div class="overlay_slot4">
-                    <a href="q-fan-configuratino/q_fan_configuration.html">
+                <div class="overlay_slot_4">
+                    <a href="q-fan-tuning/q_fan_tuning.html">
                         <button class = "button_in_window"></button>
                     </a>
                 </div>
@@ -98,12 +89,12 @@
                 <!-- DO NOT! CODE BUTTONS BELOW THE SCROLL BARS, AS IT WILL BREAK THEM -->
 
                 <div class="overlay_scroll_up">
-                    <a href="extreme-tweaker_1.html">
+                    <a href=>
                         <button class = "button_scroll_up"></button>
                     </a>
                 </div>
                 <div class="overlay_scroll_down">
-                    <a href=>
+                    <a href="q_fan_configuration2.html">
                         <button class = "button_scroll_down"></button>
                     </a>
                 </div>
