I finished the main landing page and added a button to it on the main page of BIOS version 0402.

--- a/asus_x570_creator_version_402/main/main_1.html
+++ b/asus_x570_creator_version_402/main/main_1.html
@@ -35,6 +35,11 @@
                 <img class="img-responsive"
                     src="main_1.png">
                 <!-- When copying, change href for each button for each level of directories -->
+                <div class="overlay_index">
+                    <a href="../../index.html">
+                        <button class = "button_index" {border-color: #c39e83}></button>
+                    </a>
+                </div>
                 <div class="overlay_main">
                     <a href="../main/main_1.html">
                         <button class = "button_main"></button>
