--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>ASUS x570</title>
     <style>
         html, body {
             width: 1920;
@@ -28,12 +28,19 @@
     </style>
 </head>
     <body overflow: hidden;>
+        <div id="banner_container">
+            <div class="banners">
+                <img class="head_banner"
+                src="pic_disp (1).jpg">
+            </div>
         <div id="container">
             <div class="img-wrapper">
-                <img class="img-responsive"
-                    src="/images/Screenshot 2021-09-23 15-12-55.png">
+                <img class="img-board"
+                    src="asus_x570_creator.jpg">
                 <div class="img-overlay">
-                    <button class = "button_main"></button>
+                    <a href="asus_x570_creator_version_402/main/main_1.html">
+                        <button class = "button_version"><b>BIOS Version 0402</b></button>
+                    </a>
                 </div>
             </div>
         </div>
