--- a/asus_x570_creator_version_402/monitor/q-fan-configuratino/chassis-fan(s)-configuration/chassis_fan_configuration2.html
+++ b/asus_x570_creator_version_402/monitor/q-fan-configuratino/chassis-fan(s)-configuration/chassis_fan_configuration2.html
@@ -36,7 +36,7 @@
                     src="chassis fan(s) configuratino page 2.png">
                 <!-- When copying, change href for each button for each level of directories -->
                 <div class="overlay_main">
-                    <a href="../../main/main_1.html">
+                    <a href="../../../main/main_1.html">
                         <button class = "button_main"></button>
                     </a>
                 </div>
