--- a/asus_x570_creator_version_402/monitor/q-fan-configuratino/q-fan-tuning/q_fan_tuning.html
+++ b/asus_x570_creator_version_402/monitor/q-fan-configuratino/q-fan-tuning/q_fan_tuning.html
@@ -36,7 +36,7 @@
                     src="Screenshot 2021-09-23 15-45-44.png">
                 <!-- When copying, change href for each button for each level of directories -->
                 <div class="overlay_main">
-                    <a href="../../main/main_1.html">
+                    <a href="../../../main/main_1.html">
                         <button class = "button_main"></button>
                     </a>
                 </div>
