--- a/asus_x570_creator_version_402/tool/asus-user-profile/asus_user_profile.html
+++ b/asus_x570_creator_version_402/tool/asus-user-profile/asus_user_profile.html
@@ -71,7 +71,7 @@
                 </a>
             </div>
             <div class="overlay_back_a_page">
-                <a href="../../tool_1.html">
+                <a href="../tool_1.html">
                     <button class = "button_in_window"></button>
                 </a>
             </div>
